--- a/WebCam.html
+++ b/WebCam.html
@@ -60,6 +60,7 @@
         <label>
             <input type="checkbox" id="mutePeerMic"> Mute Micro de l'autre utilisateur
         </label>
+        <div id="device-info"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -78,6 +79,7 @@
         const remoteVideo = document.getElementById('remoteVideo');
         const muteMyMicCheckbox = document.getElementById('muteMyMic');
         const mutePeerMicCheckbox = document.getElementById('mutePeerMic');
+        const deviceInfo = document.getElementById('device-info');
 
         // Fonction pour générer un ID aléatoire
         function generateRandomId() {
@@ -110,11 +112,15 @@
             });
         }
 
-        // Fonction pour obtenir le flux local
+        // Fonction pour obtenir le flux local avec meilleure qualité vidéo
         async function getLocalStream() {
             const constraints = {
                 audio: true,
-                video: true
+                video: {
+                    width: { ideal: 1280 },
+                    height: { ideal: 720 },
+                    frameRate: { ideal: 30 }
+                }
             };
 
             try {
@@ -122,9 +128,7 @@
                 const videoInputDevices = devices.filter(device => device.kind === 'videoinput');
 
                 if (videoInputDevices.length > 0) {
-                    constraints.video = {
-                        deviceId: { exact: videoInputDevices[0].deviceId }
-                    };
+                    constraints.video.deviceId = { exact: videoInputDevices[0].deviceId };
                 }
 
                 const stream = await navigator.mediaDevices.getUserMedia(constraints);
@@ -203,8 +207,26 @@
             applyPeerMicMute();
         });
 
+        // Détecter l'appareil
+        function detectDevice() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            if (/windows phone/i.test(userAgent)) {
+                return "Windows Phone";
+            }
+            if (/android/i.test(userAgent)) {
+                return "Android";
+            }
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                return "iOS";
+            }
+            return "unknown";
+        }
+
         // Initialiser l'application
         document.addEventListener('DOMContentLoaded', () => {
+            const device = detectDevice();
+            deviceInfo.textContent = 'Appareil détecté : ' + device;
+
             const storedId = localStorage.getItem('chatUsername');
             if (storedId) {
                 myIdInput.value = storedId;
