--- a/WebCam.html
+++ b/WebCam.html
@@ -61,6 +61,8 @@
             <input type="checkbox" id="mutePeerMic"> Mute Micro de l'autre utilisateur
         </label>
         <div id="device-info"></div>
+        <label for="cameraSelect">Sélectionner la caméra :</label>
+        <select id="cameraSelect"></select>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -80,6 +82,7 @@
         const muteMyMicCheckbox = document.getElementById('muteMyMic');
         const mutePeerMicCheckbox = document.getElementById('mutePeerMic');
         const deviceInfo = document.getElementById('device-info');
+        const cameraSelect = document.getElementById('cameraSelect');
 
         // Fonction pour générer un ID aléatoire
         function generateRandomId() {
@@ -119,7 +122,8 @@
                 video: {
                     width: { ideal: 1280 },
                     height: { ideal: 720 },
-                    frameRate: { ideal: 30 }
+                    frameRate: { ideal: 30 },
+                    facingMode: document.getElementById('cameraSelect').value
                 }
             };
 
@@ -139,6 +143,30 @@
             } catch (err) {
                 console.error('Failed to get local stream', err);
                 throw err;
+            }
+        }
+
+        // Fonction pour lister les caméras disponibles
+        async function listCameras() {
+            try {
+                const devices = await navigator.mediaDevices.enumerateDevices();
+                const videoInputDevices = devices.filter(device => device.kind === 'videoinput');
+                cameraSelect.innerHTML = '';
+
+                videoInputDevices.forEach(device => {
+                    const option = document.createElement('option');
+                    option.value = device.deviceId;
+                    option.text = device.label || `Camera ${cameraSelect.length + 1}`;
+                    cameraSelect.appendChild(option);
+                });
+
+                if (videoInputDevices.length === 0) {
+                    cameraSelect.style.display = 'none';
+                } else {
+                    cameraSelect.style.display = 'block';
+                }
+            } catch (err) {
+                console.error('Erreur lors de la récupération des caméras:', err);
             }
         }
 
@@ -223,7 +251,7 @@
         }
 
         // Initialiser l'application
-        document.addEventListener('DOMContentLoaded', () => {
+        document.addEventListener('DOMContentLoaded', async () => {
             const device = detectDevice();
             deviceInfo.textContent = 'Appareil détecté : ' + device;
 
@@ -234,6 +262,8 @@
             } else {
                 generateMyIdButton.click();
             }
+
+            await listCameras();
         });
     </script>
 </body>
