--- a/WebCam.html
+++ b/WebCam.html
@@ -123,18 +123,11 @@
                     width: { ideal: 1280 },
                     height: { ideal: 720 },
                     frameRate: { ideal: 30 },
-                    facingMode: document.getElementById('cameraSelect').value
+                    deviceId: { exact: cameraSelect.value }
                 }
             };
 
             try {
-                const devices = await navigator.mediaDevices.enumerateDevices();
-                const videoInputDevices = devices.filter(device => device.kind === 'videoinput');
-
-                if (videoInputDevices.length > 0) {
-                    constraints.video.deviceId = { exact: videoInputDevices[0].deviceId };
-                }
-
                 const stream = await navigator.mediaDevices.getUserMedia(constraints);
                 localStream = stream;
                 localVideo.srcObject = stream;
