--- a/WebCam.html
+++ b/WebCam.html
@@ -63,6 +63,9 @@
         <div id="device-info"></div>
         <label for="cameraSelect">Sélectionner la caméra :</label>
         <select id="cameraSelect"></select>
+        <label for="peerSelect">Sélectionner le peer ID :</label>
+        <select id="peerSelect"></select>
+        <button id="addPeerButton">Ajouter ID Peer</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -83,6 +86,8 @@
         const mutePeerMicCheckbox = document.getElementById('mutePeerMic');
         const deviceInfo = document.getElementById('device-info');
         const cameraSelect = document.getElementById('cameraSelect');
+        const peerSelect = document.getElementById('peerSelect');
+        const addPeerButton = document.getElementById('addPeerButton');
 
         // Fonction pour générer un ID aléatoire
         function generateRandomId() {
@@ -112,6 +117,22 @@
                     .catch((err) => {
                         console.error('Failed to get local stream', err);
                     });
+            });
+
+            peer.on('connection', (conn) => {
+                conn.on('open', () => {
+                    console.log('Connection established');
+                    conn.on('data', (data) => {
+                        if (data === 'request-stream') {
+                            if (localStream) {
+                                const call = peer.call(conn.peer, localStream);
+                                call.on('stream', (remoteStream) => {
+                                    remoteVideo.srcObject = remoteStream;
+                                });
+                            }
+                        }
+                    });
+                });
             });
         }
 
@@ -185,9 +206,9 @@
 
         // Gérer le clic sur le bouton d'appel
         callButton.addEventListener('click', () => {
-            const peerId = peerIdInput.value.trim();
+            const peerId = peerIdInput.value.trim() || peerSelect.value.trim();
             if (!peerId) {
-                alert('Veuillez entrer l\'ID de la personne à appeler.');
+                alert('Veuillez entrer ou sélectionner l\'ID de la personne à appeler.');
                 return;
             }
 
@@ -200,6 +221,12 @@
                     call.on('stream', (stream) => {
                         remoteStream = stream;
                         remoteVideo.srcObject = stream;
+                        applyPeerMicMute();
+                    });
+
+                    const conn = peer.connect(peerId);
+                    conn.on('open', () => {
+                        conn.send('request-stream');
                     });
                 })
                 .catch((err) => {
@@ -243,21 +270,47 @@
             return "unknown";
         }
 
-        // Initialiser l'application
+        // Ajouter un peer ID à la liste déroulante
+        addPeerButton.addEventListener('click', () => {
+            const peerId = peerIdInput.value.trim();
+            if (peerId) {
+                const option = document.createElement('option');
+                option.value = peerId;
+                option.text = peerId;
+                peerSelect.appendChild(option);
+                peerIdInput.value = '';
+            }
+        });
+
+        // Initialiser l'application lors du chargement du document
         document.addEventListener('DOMContentLoaded', async () => {
             const device = detectDevice();
             deviceInfo.textContent = 'Appareil détecté : ' + device;
 
-            const storedId = localStorage.getItem('chatUsername');
-            if (storedId) {
-                myIdInput.value = storedId;
-                initializePeer(storedId);
-            } else {
-                generateMyIdButton.click();
-            }
+            // Générer un ID Peer aléatoire
+            const randomId = generateRandomId();
+            initializePeer(randomId);
+            myIdInput.value = randomId;
 
+            // Liste des caméras disponibles
             await listCameras();
+
+            // Écouter les changements de sélection de caméra
+            cameraSelect.addEventListener('change', async () => {
+                if (localStream) {
+                    localStream.getTracks().forEach(track => track.stop());
+                }
+                try {
+                    const stream = await getLocalStream();
+                    if (call) {
+                        call.replaceTrack(stream.getVideoTracks()[0]);
+                    }
+                } catch (err) {
+                    console.error('Failed to change camera', err);
+                }
+            });
         });
     </script>
 </body>
 </html>
+
