--- a/WebCam.html
+++ b/WebCam.html
@@ -62,6 +62,7 @@
         <label>
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
+            <select id="secondCameraSelect"></select>
         </label>
         <label>
             Format de la vidéo :
@@ -84,6 +85,7 @@
         let call;
         let peerSelect = document.getElementById('peerSelect');
         let cameraSelect = document.getElementById('cameraSelect');
+        let secondCameraSelect = document.getElementById('secondCameraSelect');
         let resolutionSelect = document.getElementById('resolutionSelect');
         let addPeerButton = document.getElementById('addPeerButton');
         let startVideoButton = document.getElementById('startVideoButton');
@@ -154,14 +156,19 @@
                 const devices = await navigator.mediaDevices.enumerateDevices();
                 const videoDevices = devices.filter(device => device.kind === 'videoinput');
                 cameraSelect.innerHTML = '';
+                secondCameraSelect.innerHTML = '';
+
                 videoDevices.forEach(device => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
                     option.text = device.label || `Camera ${cameraSelect.options.length + 1}`;
                     cameraSelect.appendChild(option);
+                    secondCameraSelect.appendChild(option.cloneNode(true));
                 });
+
                 const defaultCamera = videoDevices.find(device => device.label.toLowerCase().includes('front'));
                 cameraSelect.value = defaultCamera ? defaultCamera.deviceId : videoDevices[0].deviceId;
+                secondCameraSelect.value = videoDevices.length > 1 ? videoDevices[1].deviceId : '';
             } catch (err) {
                 console.error('Error listing cameras', err);
             }
