--- a/WebCam.html
+++ b/WebCam.html
@@ -63,8 +63,8 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <label>
-            Sélectionner une deuxième caméra :
+        <label id="secondCameraLabel" style="display:none;">
+            Sélectionner la deuxième caméra :
             <select id="secondCameraSelect"></select>
         </label>
         <label>
@@ -88,6 +88,7 @@
         let call;
         let peerSelect = document.getElementById('peerSelect');
         let cameraSelect = document.getElementById('cameraSelect');
+        let secondCameraLabel = document.getElementById('secondCameraLabel');
         let secondCameraSelect = document.getElementById('secondCameraSelect');
         let resolutionSelect = document.getElementById('resolutionSelect');
         let addPeerButton = document.getElementById('addPeerButton');
@@ -161,19 +162,36 @@
                 cameraSelect.innerHTML = '';
                 secondCameraSelect.innerHTML = '';
 
+                let hasFrontCamera = false;
+                let hasBackCamera = false;
+
                 videoDevices.forEach(device => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
                     option.text = device.label || `Camera ${cameraSelect.options.length + 1}`;
                     cameraSelect.appendChild(option);
 
-                    const secondOption = option.cloneNode(true);
-                    secondCameraSelect.appendChild(secondOption);
+                    if (device.label.toLowerCase().includes('front')) {
+                        hasFrontCamera = true;
+                    }
+                    if (device.label.toLowerCase().includes('back')) {
+                        hasBackCamera = true;
+                    }
                 });
+
+                if (hasFrontCamera && hasBackCamera) {
+                    secondCameraLabel.style.display = 'block';
+                    secondCameraSelect.disabled = false;
+                    secondCameraSelect.appendChild(new Option('Caméra avant', 'user'));
+                    secondCameraSelect.appendChild(new Option('Caméra arrière', 'environment'));
+                } else {
+                    secondCameraLabel.style.display = 'none';
+                    secondCameraSelect.disabled = true;
+                }
 
                 const defaultCamera = videoDevices.find(device => device.label.toLowerCase().includes('front'));
                 cameraSelect.value = defaultCamera ? defaultCamera.deviceId : videoDevices[0].deviceId;
-                secondCameraSelect.value = videoDevices.length > 1 ? videoDevices[1].deviceId : '';
+                secondCameraSelect.value = 'user'; // Sélectionner la caméra avant par défaut
             } catch (err) {
                 console.error('Error listing cameras', err);
             }
